--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
     "alredy",
+    "cpassword",
     "dbconnect",
+    "GECM",
     "loggedin",
+    "loginsystem",
     "tempname"
   ]
 }
